fix: final wpp